# spatialforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.worker  Makefile  README.md  SECURITY_AUDIT.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keepalive.yml  pages.yml  publish-sdk.yml
benchmarks/: README.md  _common.py  bench_depth.py  bench_reconstruct.py  compare_reconstruct.py  quality_reconstruct.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCKER_OPTIMIZATION.md  SALES_PLAYBOOK.md
infra/redis/: Dockerfile  fly.toml
monitoring/: grafana-dashboard.json  prometheus.yml
requirements/: typecheck.txt
scripts/: benchmark.py  demo_server.py  generate_demo_frames.py  prepare_dataset.py  setup_models.py  train_defect_model.py
sdk/: README.md  pyproject.toml
sdk/spatialforge_client/: __init__.py  _helpers.py  async_client.py  cli.py  client.py  exceptions.py  models.py
sdk/tests/: conftest.py  test_async_client.py  test_models.py  test_retry_errors.py  test_sync_client.py
site/: contact.html  demo.html  docs.html  index.html  inspect.html  pricing.html  privacy.html  proposal.html  rail-demo.css  rail-demo.html  railscan-pitch.html  railscan-platform.html  railscan.html  sitemap.xml  terms.html  whitepaper.html
site/js/: rail-demo.js
site/rail-assets/: frames_data.json  metadata.json
site/rail-assets/video/jr23/: timeline.json
site/rail-assets/video/jrsam3/: timeline.json
spatialforge/: __init__.py  config.py  logging_config.py  main.py  metrics.py  resilience.py
spatialforge/api/v1/: _video_job_utils.py  admin.py  billing.py  depth.py  floorplan.py  inspect.py  measure.py  pose.py  reconstruct.py  segment.py
spatialforge/auth/: api_keys.py  rate_limiter.py
spatialforge/billing/: __init__.py  stripe_billing.py
spatialforge/evaluation/: __init__.py  reconstruct_quality.py
spatialforge/inference/: defect_engine.py  depth_engine.py  inspector.py  measure_engine.py  model_manager.py  pose_engine.py  reconstruct_engine.py  tensorrt_optimizer.py
spatialforge/middleware/: __init__.py  security_headers.py  timeout.py  webhook_rate_limiter.py
spatialforge/models/: inspection.py  requests.py  responses.py
spatialforge/report/: __init__.py  generator.py
spatialforge/static/.well-known/: security.txt
spatialforge/storage/: object_store.py
spatialforge/utils/: image.py  video.py
spatialforge/workers/: celery_app.py  tasks.py  webhooks.py
static/demo/: index.html
tests/: conftest.py  test_api.py  test_billing.py  test_celery_app.py  test_config.py  test_depth.py  test_depth_engine_da3.py  test_error_handling.py  test_inspection.py  test_middleware.py  test_model_manager.py  test_object_store_async.py  test_reconstruct_engine_backend.py  test_reconstruct_quality_metrics.py  test_reconstruct_task_error_messages.py  test_validation.py  test_video.py  test_video_job_polling.py  test_video_job_utils.py
