[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialforge"
version = "0.1.0"
description = "Python SDK for SpatialForge — Any Camera. Instant 3D. One API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SpatialForge" }]
keywords = ["3d", "depth-estimation", "spatial-intelligence", "api-client"]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://spatialforge.dev"
Documentation = "https://docs.spatialforge.dev"

[tool.hatch.build.targets.wheel]
packages = ["spatialforge_client"]
