[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialforge-client"
version = "0.1.0"
description = "Python SDK for SpatialForge — Any Camera. Instant 3D. One API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SpatialForge" }]
keywords = ["3d", "depth-estimation", "spatial-intelligence", "api-client", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
cli = ["click>=8.1.0", "rich>=13.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]
all = ["spatialforge-client[cli,dev]"]

[project.scripts]
spatialforge = "spatialforge_client.cli:main [cli]"

[project.urls]
Homepage = "https://github.com/maruyamakoju/spatialforge"
Documentation = "https://spatialforge-demo.fly.dev/docs"
Repository = "https://github.com/maruyamakoju/spatialforge"
Issues = "https://github.com/maruyamakoju/spatialforge/issues"
Demo = "https://maruyamakoju.github.io/spatialforge/demo.html"

[tool.hatch.build.targets.wheel]
packages = ["spatialforge_client"]
